plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

group 'org.example'
version '1.0'

sourceCompatibility = '15'
mainClassName = "main.MainApplication"
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:19.0.0'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.1.2'
    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
    implementation group: 'org.reactfx', name: 'reactfx', version: '1.4.1'
    implementation group: 'io.reactivex.rxjava2', name: 'rxjavafx', version: '2.2.2'
    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.2'
    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
}

run {
    jvmArgs = [
            "--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
    ]
}



javafx {
    version = "15"
    modules = [ 'javafx.controls' ,'javafx.fxml', 'javafx.web', 'javafx.graphics']
}